@@ -1,3 +1,4 @@
+Fixed: Chart cursor goes off chart when zoomed in
 Fixed: zoom button should have plus on top and right
 Added tree and house graphics
 # 0.00.04 (41679) Jun 14, 2010
